# rag-test

./: .gitignore  ARCHITECTURE.md  __init__.py  ai_model.py  conf.py  constants.py  main.py  pyproject.toml  requirements.txt
alembic/versions/: 8d1356115b3d_initial_schema.py
crud/: document.py
models/: __init__.py  db.py  document.py
routers/: __init__.py  documents.py  query.py
schemas/: base.py  query.py
services/: chroma_document_service.py  document_pipeline.py  file_service.py  rag_pipeline.py
upload/: README.md
utils/: embedding.py  markdown_splitter.py  tools.py
