[project]
name = "vardast"
version = "0.1.0"
description = "Test project for LSP import resolution"
authors = [
    { name = "Alireza", email = "your-email@example.com" }
]
dependencies = [
    "sqlmodel",
    "sentence-transformers",
    "chromadb",
]

[tool.python]
requires = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.11
files = "models/**/*.py, main.py"
ignore_missing_imports = true

[tool.pyright]
extraPaths = ["./models"]
